[gd_scene load_steps=6 format=2]

[ext_resource path="res://Alien.png" type="Texture" id=1]
[ext_resource path="res://Player/Player_.gd" type="Script" id=2]
[ext_resource path="res://explotado.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 115.613, 91.0648 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
position = Vector2( 299.68, -30.9193 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 606.495, 318.708 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 605.306, 319.897 )
rotation = -1.57045
scale = Vector2( 0.3386, 0.296845 )
frames = SubResource( 2 )

[node name="Bala_cd" type="Timer" parent="."]
wait_time = 0.3

[node name="position_laser" type="Position2D" parent="."]
position = Vector2( 425.736, 325.843 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Bala_cd" to="." method="_on_Bala_cd_timeout"]
